[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyscrapers"
version = "0.0.67"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "project to produce various useful scrapers"
readme = "README.md"
license = "MIT"
keywords=[
    "scrape",
    "images",
    "social",
    "facebook",
    "instagram",
    "vk",
    "download",
    "pics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "lxml",
    "requests",
    "browser-cookie3",
    "dbus-python",
    "pytconf",
    "pylogconf",
    "youtube-dl",
    "pyeventroute",
    "fake-useragent",
    "tqdm",
    "beautifulsoup4",
    "pydantic",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pyscrapers"
"Bug Tracker" = "https://github.com/veltzer/pyscrapers/issues"
"Documentation" = "https://veltzer.github.io/pyscrapers"
"Download" = "https://pypi.org/project/pyscrapers/"
"Repository" = "https://github.com/veltzer/pyscrapers"

[project.scripts]
pyscrapers = "pyscrapers.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyscrapers"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyscrapers/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"

[tool.uv.pip]
prerelease = "disallow"
